--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="has-navbar-fixed-top">
   <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  
     <title>Keeper App</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.2/css/bulma.css"> -->
+    <!-- <link rel="stylesheet" href="/bulma/css/bulma.css" /> -->
+    <!-- BULMA CSS is imported in the index.js file....  -->
+
+    <link rel="stylesheet" type="text/css" href="./styles.css" />
+
+    <!-- <link rel="stylesheet" type="text/css" href="./debug.css"> -->
+
   </head>
 
   <body>
