--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,13 +6,16 @@
   
     <title>Keeper App</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.2/css/bulma.css"> -->
     <!-- <link rel="stylesheet" href="/bulma/css/bulma.css" /> -->
     <!-- BULMA CSS is imported in the index.js file....  -->
 
-    <link rel="stylesheet" type="text/css" href="./styles.css" />
+    <link rel="stylesheet" type="text/css" href="./index.css" />
+    <link rel="stylesheet" type="text/css" href="./form.css" />
+    <link rel="stylesheet" type="text/css" href="./map.css" />
 
     <!-- <link rel="stylesheet" type="text/css" href="./debug.css"> -->
 
